torchlite-frontend/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torchlite-frontend-test-ingress
  annotations:
    #kubernetes.io/ingress.class: public
    #nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: buypass
spec:
  rules:
    - host: torchlite-test.192.17.61.53.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torchlite-frontend-test-service
                port:
                  number: 3000
  tls:
    - hosts:
      - torchlite-test.192.17.61.53.nip.io
      secretName: torchlite-frontend-test-ingress-cert
