torchlite-frontend/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torchlite-frontend-test-service
spec:
  selector:
    app: torchlite-frontend-test-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
